# no-shoes_zone_alert

./: readme.md
ros2_ws/src/my_camera_package/: CMakeLists.txt  package.xml
ros2_ws/src/my_camera_package/src/: camera_capture.cpp
ros2_ws/src/my_control_package/: package.xml  setup.cfg  setup.py
ros2_ws/src/my_control_package/launch/: control_launch.py
ros2_ws/src/my_control_package/my_control_package/: control_node.py
ros2_ws/src/my_inference_package/: package.xml  setup.cfg  setup.py
ros2_ws/src/my_inference_package/launch/: inference_launch.py  multi_node_launch.py
ros2_ws/src/my_inference_package/my_inference_package/: inference_node.py
ros2_ws/src/my_inference_package/my_inference_package/src/: modified_test.py  modified_test_tensorrt.py  test.py  test_tensorrt.py  train.py
ros2_ws/src/my_laser_processor/: CMakeLists.txt  package.xml
ros2_ws/src/my_laser_processor/cmake/: FindTensorRT.cmake
ros2_ws/src/my_laser_processor/src/: .laser_processor.cpp.swp  laser_processor.cpp
ros2_ws/src/urg_node/config/: urg_node_params.yaml
ros2_ws/src/urg_node/src/: urg_node.cpp
training/: resnet.py
training/src/: eval.py  test.py  test_tensorrt.py  vgg.py
